// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleCurrencyInput should adjust input padding and postfix width to match currency symbol width 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  padding-right: 48px;
  padding-right: calc(24px + 3ch);
  text-align: left;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  color: #2567D8;
  line-height: 16px;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
  width: 3ch;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    aria-invalid="false"
    class="circuit-0 circuit-1"
    placeholder="123,45"
    type="tel"
  />
  <span
    class="circuit-2 circuit-3"
  >
    CHF
  </span>
</div>
`;

exports[`SimpleCurrencyInput should prioritize disabled over error styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  padding-right: 48px;
  padding-right: calc(24px + 0ch);
  text-align: left;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  color: #2567D8;
  line-height: 16px;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
  width: 0ch;
}

<div
  class="circuit-4 circuit-5"
  disabled=""
>
  <input
    aria-invalid="true"
    class="circuit-0 circuit-1"
    disabled=""
    type="tel"
  />
  <span
    class="circuit-2 circuit-3"
    disabled=""
  />
</div>
`;

exports[`SimpleCurrencyInput should prioritize disabled over warning styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  padding-right: 48px;
  padding-right: calc(24px + 0ch);
  text-align: left;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #FFC859;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

.circuit-2 {
  color: #2567D8;
  line-height: 16px;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
  width: 0ch;
}

.circuit-2:not(:focus) {
  color: #FFC859;
}

.circuit-2:not(:focus) {
  color: #FFAF9F;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    aria-invalid="true"
    class="circuit-0 circuit-1"
    type="tel"
  />
  <span
    class="circuit-2 circuit-3"
  />
</div>
`;

exports[`SimpleCurrencyInput should render with default styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  padding-right: 48px;
  padding-right: calc(24px + 1ch);
  text-align: left;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  color: #2567D8;
  line-height: 16px;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
  width: 1ch;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    aria-invalid="false"
    class="circuit-0 circuit-1"
    type="tel"
  />
  <span
    class="circuit-2 circuit-3"
  >
    €
  </span>
</div>
`;

exports[`SimpleCurrencyInput should render with error styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  padding-right: 48px;
  padding-right: calc(24px + 1ch);
  text-align: left;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

.circuit-2 {
  color: #2567D8;
  line-height: 16px;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
  width: 1ch;
}

.circuit-2:not(:focus) {
  color: #FFAF9F;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    aria-invalid="true"
    class="circuit-0 circuit-1"
    type="tel"
  />
  <span
    class="circuit-2 circuit-3"
  >
    €
  </span>
</div>
`;

exports[`SimpleCurrencyInput should render with warning styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  padding-right: 48px;
  padding-right: calc(24px + 1ch);
  text-align: left;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #FFC859;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFC859;
}

.circuit-2 {
  color: #2567D8;
  line-height: 16px;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
  width: 1ch;
}

.circuit-2:not(:focus) {
  color: #FFC859;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    aria-invalid="false"
    class="circuit-0 circuit-1"
    type="tel"
  />
  <span
    class="circuit-2 circuit-3"
  >
    €
  </span>
</div>
`;

exports[`SimpleCurrencyInput should support rendering symbols on the left 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  color: #2567D8;
  line-height: 16px;
  position: absolute;
  top: 1px;
  left: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
  width: 1ch;
}

.circuit-2 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-left: 48px;
  padding-left: calc(24px + 1ch);
  text-align: right;
}

.circuit-2:focus,
.circuit-2:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-2::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

<div
  class="circuit-4 circuit-5"
>
  <span
    class="circuit-0 circuit-1"
  >
    $
  </span>
  <input
    aria-invalid="false"
    class="circuit-2 circuit-3"
    placeholder="123.45"
    type="tel"
  />
</div>
`;
